feat: 경기장 조회 API res 수정